Fix coupon controller bug and pluralize selected query params
